fix css issue fix new panel not showing in editor.

--- a/Anarchy/UI/src/mods/partialAnarchyOptions/partialAnarchyMenu.module.scss
+++ b/Anarchy/UI/src/mods/partialAnarchyOptions/partialAnarchyMenu.module.scss
@@ -21,7 +21,6 @@
     position: absolute;
     top: 10rem;    
     left: 600rem;
-    flex-direction: flex-start;
 }
 
 .errorTypeColumn {
